--- a/src/work/2016-01-01-simform.md
+++ b/src/work/2016-01-01-simform.md
@@ -1,42 +1,608 @@
 ---
-title: Simform
+title: Building a Multi-Channel Demand Generation Engine for Software Services Company
+meta_title: Simform
 body_class: work
-excerpt: I worked on different Digital marketing campaigns that includes SEO, Content marketing, Social media promotions, and Account-based marketing.
+excerpt: My professional marketing journey began at Simform in October 2017. Over 5 transformative years, I grew from an Inbound Marketing Executive to Demand Generation Lead, scaling digital marketing operations across multiple technology verticals.
 highlightjs: true
-year: 2017 - 2022
+year: Oct 2017 - Sept 2022
+client: "Simform"
+industry: "Software Development & IT Services"
+location: "Ahmedabad, India"
+since: "Oct 2017 - Sept 2022"
+tags: ["case-study", "demand-generation", "seo", "content-marketing", "b2b-services"]
+
+story: |
+  <p>Simform, a rapidly growing software development company, was at a pivotal moment in its growth trajectory. They had exceptional technical talent and delivered outstanding solutions across multiple technology verticals—but they needed a scalable way to generate consistent, qualified leads in an increasingly competitive market.</p>
+  
+  <p>When I joined as an Inbound Marketing Executive in October 2017, my role was clear: execute content marketing and SEO campaigns that would drive organic visibility and generate leads. Working under the guidance of experienced team leads, I immersed myself in the fundamentals—keyword research, content optimization, link building, and online reputation management across different technology verticals.</p>
+  
+  <p>But there was a special project that would define my early years: spearheading a location-based microsite strategy. This wasn't just about creating content—it was about building an entirely new lead generation channel from the ground up, targeting specific geographic markets with tailored SEO and content marketing tactics. The success of this initiative demonstrated what focused, strategic digital marketing could achieve.</p>
+  
+  <p>By 2020, my contributions and growth were recognized with a promotion to Demand Generation Lead. Now, I wasn't just executing campaigns—I was conceptualizing end-to-end digital marketing funnels, implementing marketing automation, launching account-based marketing initiatives, and collaborating directly with sales teams to optimize conversion at every stage of the customer journey.</p>
+  
+  <p>Over five years, I evolved from executing tactical marketing activities to building comprehensive demand generation strategies that spanned SEO, content marketing, paid social, programmatic display advertising, and ABM. I learned to anticipate competitor moves, identify conversion bottlenecks, and create scalable funnels that consistently delivered qualified leads across multiple technology verticals.</p>
+
+challenge: "Simform needed to establish a consistent, scalable lead generation engine across multiple technology verticals in a highly competitive software development market. They faced challenges with organic visibility in competitive keywords, lacked a structured content strategy across verticals, had no location-specific marketing approach, limited marketing automation capabilities, and needed better alignment between marketing and sales teams for lead qualification and conversion."
+
+objective: "Build a comprehensive, multi-channel demand generation engine that generates consistent qualified leads across technology verticals. Objectives included: establishing strong organic visibility through SEO and content marketing, launching successful location-based lead generation initiatives, implementing marketing automation for lead nurturing, creating account-based marketing campaigns aligned with sales goals, and developing scalable funnels that identify and optimize key conversion points throughout the customer journey."
+
+solutions:
+  - icon: "🌍"
+    title: "Location-Based Strategy"
+    description: "Spearheaded location-specific microsite development with targeted SEO campaigns, localized content, and geographic-specific lead generation tactics to capture regional demand."
+  
+  - icon: "📊"
+    title: "Multi-Vertical SEO & Content"
+    description: "Developed and executed comprehensive SEO and content marketing strategies across three technology verticals, including competitor research, keyword targeting, and performance tracking."
+  
+  - icon: "🔗"
+    title: "Authority Building & PR"
+    description: "Executed strategic link-building campaigns to improve backlink profiles and secure visibility on high-authority publications, enhancing domain authority and brand credibility."
+  
+  - icon: "⚙️"
+    title: "Marketing Automation & ABM"
+    description: "Implemented end-to-end marketing automation using HubSpot, ActiveCampaign, and User.com. Launched account-based marketing initiatives with LinkedIn and email campaigns aligned to sales conversion goals."
+
+swot:
+  strengths: "Strong technical capabilities across multiple verticals, proven project delivery track record, growing reputation in software development market, and experienced leadership team."
+  weaknesses: "Limited marketing automation maturity, inconsistent lead quality across channels, no location-specific marketing strategy, and gaps in sales-marketing alignment."
+  opportunities: "High demand for software development services, underutilized location-based marketing opportunities, growing digital marketing budgets, and ability to establish thought leadership in multiple technology niches."
+  threats: "Intense competition from global and regional software development firms, rapidly changing SEO algorithms, increasing cost of paid acquisition channels, and long sales cycles requiring sustained nurturing."
+
+strategies:
+  - title: "Foundation Building (2017-2018)"
+    description: "Established core inbound marketing capabilities including SEO fundamentals, content marketing execution, link-building operations, and online reputation management across technology verticals. Launched and optimized location-specific microsite with targeted content and SEO strategies."
+  
+  - title: "Vertical Expansion (2018-2020)"
+    description: "Scaled content and SEO operations across three distinct technology verticals. Developed vertical-specific landing pages, case studies, and conversion assets. Implemented intent-driven content including ebooks, case studies, blogs, and infographics. Executed user-enrichment CTAs and popups for prospect capture."
+  
+  - title: "Demand Gen Transformation (2020-2021)"
+    description: "Promoted to Demand Generation Lead. Implemented comprehensive digital marketing funnels spanning SEO, content marketing, paid social (Facebook/LinkedIn), programmatic display, and account-based marketing. Introduced marketing automation platforms and lead scoring mechanisms. Enhanced sales-marketing collaboration."
+  
+  - title: "Optimization & Scale (2021-2022)"
+    description: "Focused on funnel optimization, identifying conversion bottlenecks, and implementing data-driven improvements. Conducted competitive SWOT analysis to inform strategy. Scaled successful channels and campaigns. Developed automated reporting and campaign tracking systems for continuous optimization."
+
+results:
+  - icon: "🚀"
+    value: "3X"
+    label: "Traffic Growth"
+  
+  - icon: "📍"
+    value: "100%"
+    label: "Location Site Success"
+  
+  - icon: "📈"
+    value: "5+"
+    label: "Years of Growth"
+  
+  - icon: "🎯"
+    value: "Multi"
+    label: "Vertical Coverage"
+  
+  - icon: "⚡"
+    value: "E2E"
+    label: "Marketing Automation"
+  
+  - icon: "👔"
+    value: "ABM"
+    label: "Program Launch"
 ---
 
-I joined Simform in October 2017 as an inbound marketing executive. I worked under my team lead to execute content marketing and SEO campaigns for different technology verticals. To put it succinctly, I worked on content, SEO, link-building, and online reputation management. 
+<style>
+/* Case Study Styles */
+.case-study {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 40px 20px;
+  background: #0E091D;
+  min-height: 100vh;
+}
 
-Additionaly, I spearheaded a location-based website and generated leads through SEO and content marketing tactics.  After a few years, in 2020, I got promoted as Demand Generation Lead. As a part of my work, I implemented complete end-to-end Digital marketing funnels that include SEO, Content-marketing, Facebook/ Linkedin marketing, and Account-based marketing (Linkedin and Emails). 
+/* Hero Section */
+.case-study-hero {
+  text-align: center;
+  padding: 60px 20px;
+  background: linear-gradient(135deg, #EC4899 0%, #B91C1C 100%);
+  color: white;
+  border-radius: 20px;
+  margin-bottom: 60px;
+  box-shadow: 0 10px 40px rgba(236, 72, 153, 0.3);
+}
 
----
+.case-study-hero h1 {
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+  line-height: 1.2;
+}
 
-## My work description at Simform as Demand Generation Lead
+.case-study-hero p {
+  font-size: 1.25rem;
+  opacity: 0.9;
+  max-width: 800px;
+  margin: 0 auto;
+}
 
-Responsible for conceptualizing, execution, tracking, and reporting of digital marketing campaigns.
+/* Client Info Grid */
+.client-info {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 30px;
+  margin: 60px 0;
+  padding: 40px;
+  background: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 15px;
+  backdrop-filter: blur(10px);
+}
 
-Duties include :
-..............................................................................................................................................................................
+.client-info-item {
+  text-align: center;
+}
 
-* Anticipate competitors strengths, weaknesses, opportunities and accordingly create scalable funnels to increase traffic and identify key conversion points in marketing funnels
-* Supporting all aspects of the planning and management of digital marketing
-campaigns through a range of channels like SEO, Content, Social media, Programmatic Display advertising
-* Assist and collaborate with team with account-based marketing planning and execution aligned to sales conversion
-* Collaborate with content, SEO operations, and design team to deliver collateral/brochures, web content, emails, landing pages, videos, and other assets that drive customer engagement
-* Create, manage and execute marketing automated campaigns using a marketing automation platform like Hubspot, Active Campaign, user.com, etc.
+.client-info-label {
+  font-size: 0.875rem;
+  color: rgba(255, 255, 255, 0.6);
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 8px;
+  font-weight: 600;
+}
 
-## My work experience at Simform as Inbound Marketing Executive
+.client-info-value {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #BF870B;
+}
 
-Responsible for executing Inbound marketing activities like SEO, Content-marketing, which involves competitor research, planning, execution, and reporting.
+/* Content Sections */
+.case-study-section {
+  margin: 60px 0;
+}
 
-Duties include:
-...........................................................................................................................................................................................
+.case-study-section h2 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: white;
+  position: relative;
+  padding-bottom: 15px;
+}
 
-* Develop overall strategy & location-specific SEO campaigns aimed at building brand awareness, growing organic traffic, increasing engagement, and generate organic leads for a location-specific microsite
-* Develop, Manage, and Track Digital marketing campaigns for three technology verticals
-*Prepare and present reports on the marketing campaign's overall performance
-* Carry out various link-building activities to improve the backlink profile and get visibility on the other high authority publications.
-* Handle SEO and content generation for landing pages and case-studies
-* Implement user-enrich CTAs and popups to capture the relevant prospects and prepared intent-driven content like Ebooks, Case-studies, blogs, Infographics to help nurture these prospects
-* Worked closely with CMO and marketing manager to help optimize the customer-focused funnels and find out gaps and strategies to improvise the existing funnels
+.case-study-section h2::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 80px;
+  height: 4px;
+  background: linear-gradient(90deg, #EC4899 0%, #B91C1C 100%);
+  border-radius: 2px;
+}
+
+.case-study-section h3 {
+  font-size: 1.75rem;
+  font-weight: 600;
+  margin: 30px 0 15px;
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.case-study-section p {
+  font-size: 1.125rem;
+  line-height: 1.8;
+  color: rgba(255, 255, 255, 0.7);
+  margin-bottom: 20px;
+}
+
+/* Story Section */
+.story-section {
+  background: rgba(255, 255, 255, 0.05);
+  padding: 50px;
+  border-radius: 15px;
+  border-left: 5px solid #EC4899;
+  backdrop-filter: blur(10px);
+}
+
+/* Challenge/Objective Cards */
+.challenge-objective-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 30px;
+  margin: 40px 0;
+}
+
+.challenge-card, .objective-card {
+  padding: 40px;
+  border-radius: 15px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+}
+
+.challenge-card {
+  background: linear-gradient(135deg, #BF870B 0%, #D4A017 100%);
+  color: white;
+}
+
+.objective-card {
+  background: linear-gradient(135deg, #28A745 0%, #16A34A 100%);
+  color: white;
+}
+
+.challenge-card h3, .objective-card h3 {
+  margin-top: 0;
+  font-size: 1.5rem;
+  color: white;
+}
+
+/* Solutions Grid */
+.solutions-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 30px;
+  margin: 40px 0;
+}
+
+.solution-item {
+  background: rgba(255, 255, 255, 0.05);
+  padding: 40px;
+  border-radius: 15px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  text-align: center;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
+  backdrop-filter: blur(10px);
+}
+
+.solution-item:hover {
+  transform: translateY(-10px);
+  border-color: #EC4899;
+  box-shadow: 0 8px 30px rgba(236, 72, 153, 0.4);
+}
+
+.solution-icon {
+  font-size: 4rem;
+  margin-bottom: 20px;
+}
+
+.solution-item h4 {
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-bottom: 15px;
+  color: white;
+}
+
+.solution-item p {
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.7);
+  line-height: 1.6;
+}
+
+/* SWOT Analysis */
+.swot-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  margin: 40px 0;
+}
+
+.swot-item {
+  padding: 30px;
+  border-radius: 15px;
+  color: white;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+}
+
+.swot-item.strengths {
+  background: linear-gradient(135deg, #28A745 0%, #16A34A 100%);
+}
+
+.swot-item.weaknesses {
+  background: linear-gradient(135deg, #B91C1C 0%, #DC2626 100%);
+}
+
+.swot-item.opportunities {
+  background: linear-gradient(135deg, #BF870B 0%, #D4A017 100%);
+}
+
+.swot-item.threats {
+  background: linear-gradient(135deg, #EC4899 0%, #F472B6 100%);
+}
+
+.swot-item h4 {
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-bottom: 15px;
+  color: white;
+}
+
+.swot-item p {
+  font-size: 1rem;
+  line-height: 1.6;
+  color: rgba(255, 255, 255, 0.95);
+}
+
+/* Strategy & Execution */
+.strategy-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 30px;
+  margin: 40px 0;
+}
+
+.strategy-item {
+  background: rgba(255, 255, 255, 0.05);
+  padding: 30px;
+  border-radius: 15px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-top: 4px solid #EC4899;
+  backdrop-filter: blur(10px);
+  transition: all 0.3s ease;
+}
+
+.strategy-item:hover {
+  border-color: #EC4899;
+  box-shadow: 0 4px 20px rgba(236, 72, 153, 0.3);
+}
+
+.strategy-item h4 {
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-bottom: 15px;
+  color: white;
+}
+
+.strategy-item p {
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.7);
+  line-height: 1.7;
+}
+
+/* Results Section */
+.results-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 30px;
+  margin: 40px 0;
+}
+
+.result-item {
+  background: rgba(255, 255, 255, 0.05);
+  padding: 40px 30px;
+  border-radius: 15px;
+  text-align: center;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  transition: all 0.3s ease;
+}
+
+.result-item:hover {
+  transform: translateY(-8px);
+  border-color: #BF870B;
+  box-shadow: 0 8px 30px rgba(191, 135, 11, 0.4);
+}
+
+.result-icon {
+  font-size: 3rem;
+  margin-bottom: 15px;
+}
+
+.result-value {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #BF870B;
+  margin-bottom: 10px;
+}
+
+.result-label {
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.8);
+  font-weight: 600;
+}
+
+/* CTA Section */
+.case-study-cta {
+  background: linear-gradient(135deg, #EC4899 0%, #B91C1C 100%);
+  color: white;
+  padding: 60px 40px;
+  border-radius: 20px;
+  text-align: center;
+  margin: 80px 0 40px;
+  box-shadow: 0 10px 40px rgba(236, 72, 153, 0.4);
+}
+
+.case-study-cta h2 {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  color: white;
+}
+
+.case-study-cta h2::after {
+  display: none;
+}
+
+.case-study-cta p {
+  font-size: 1.25rem;
+  margin-bottom: 30px;
+  opacity: 0.95;
+  color: white;
+}
+
+.cta-buttons {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.cta-button {
+  display: inline-block;
+  padding: 15px 40px;
+  border-radius: 50px;
+  font-weight: bold;
+  font-size: 1.125rem;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+.cta-button.primary {
+  background: #BF870B;
+  color: white;
+}
+
+.cta-button.primary:hover {
+  background: #D4A017;
+  transform: translateY(-3px);
+  box-shadow: 0 10px 25px rgba(191, 135, 11, 0.4);
+}
+
+.cta-button.secondary {
+  background: transparent;
+  color: white;
+  border: 2px solid white;
+}
+
+.cta-button.secondary:hover {
+  background: white;
+  color: #EC4899;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .case-study-hero h1 {
+    font-size: 2rem;
+  }
+  
+  .case-study-section h2 {
+    font-size: 2rem;
+  }
+  
+  .solutions-grid,
+  .strategy-grid,
+  .results-grid {
+    grid-template-columns: 1fr;
+  }
+}
+</style>
+
+  <!-- Client Information -->
+  <div class="client-info">
+    <div class="client-info-item">
+      <div class="client-info-label">Client</div>
+      <div class="client-info-value">{{ client }}</div>
+    </div>
+    <div class="client-info-item">
+      <div class="client-info-label">Industry</div>
+      <div class="client-info-value">{{ industry }}</div>
+    </div>
+    <div class="client-info-item">
+      <div class="client-info-label">Location</div>
+      <div class="client-info-value">{{ location }}</div>
+    </div>
+    <div class="client-info-item">
+      <div class="client-info-label">Duration</div>
+      <div class="client-info-value">{{ since }}</div>
+    </div>
+  </div>
+
+  <!-- About/Story Section -->
+  <section class="case-study-section">
+    <h2>My Journey at {{ client }}</h2>
+    <div class="story-section">
+      {{ story | safe }}
+    </div>
+  </section>
+
+  <!-- Challenge & Objective -->
+  <section class="case-study-section">
+    <h2>Challenge & Objective</h2>
+    <div class="challenge-objective-grid">
+      <div class="challenge-card">
+        <h3>The Challenge</h3>
+        <p>{{ challenge }}</p>
+      </div>
+      <div class="objective-card">
+        <h3>Objective</h3>
+        <p>{{ objective }}</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Proposed Solutions -->
+  <section class="case-study-section">
+    <h2>Strategic Solutions</h2>
+    <p>From executing tactical campaigns to conceptualizing comprehensive marketing funnels, I developed and implemented multi-channel strategies that delivered consistent results.</p>
+    <div class="solutions-grid">
+{%- for solution in solutions %}
+      <div class="solution-item">
+        <div class="solution-icon">{{ solution.icon }}</div>
+        <h4>{{ solution.title }}</h4>
+        <p>{{ solution.description }}</p>
+      </div>
+{%- endfor %}
+    </div>
+  </section>
+
+  <!-- SWOT Analysis -->
+  <section class="case-study-section">
+    <h2>SWOT Analysis</h2>
+    <p>Understanding market dynamics and internal capabilities was essential to building sustainable competitive advantages and scalable growth strategies.</p>
+    <div class="swot-grid">
+      <div class="swot-item strengths">
+        <h4>Strengths</h4>
+        <p>{{ swot.strengths }}</p>
+      </div>
+      <div class="swot-item weaknesses">
+        <h4>Weaknesses</h4>
+        <p>{{ swot.weaknesses }}</p>
+      </div>
+      <div class="swot-item opportunities">
+        <h4>Opportunities</h4>
+        <p>{{ swot.opportunities }}</p>
+      </div>
+      <div class="swot-item threats">
+        <h4>Threats</h4>
+        <p>{{ swot.threats }}</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Strategy & Execution -->
+  <section class="case-study-section">
+    <h2>Strategy & Execution</h2>
+    <p>My five-year journey reflected progressive growth—from mastering inbound marketing fundamentals to architecting comprehensive demand generation systems.</p>
+    <div class="strategy-grid">
+{%- for strategy in strategies %}
+      <div class="strategy-item">
+        <h4>{{ strategy.title }}</h4>
+        <p>{{ strategy.description }}</p>
+      </div>
+{%- endfor %}
+    </div>
+  </section>
+
+  <!-- Performance Results -->
+  <section class="case-study-section">
+    <h2>Key Achievements</h2>
+    <div class="results-grid">
+{%- for result in results %}
+      <div class="result-item">
+        <div class="result-icon">{{ result.icon }}</div>
+        <div class="result-value">{{ result.value }}</div>
+        <div class="result-label">{{ result.label }}</div>
+      </div>
+{%- endfor %}
+    </div>
+  </section>
+
+  <!-- CTA Section -->
+  <div class="case-study-cta">
+    <h2>Looking for Proven Marketing Leadership?</h2>
+    <p>Let's discuss how my experience building scalable demand generation systems can accelerate your growth.</p>
+    <div class="cta-buttons">
+      <a href="mailto:rakshitsoral@gmail.com" class="cta-button primary">
+        📧 Get in Touch
+      </a>
+      <a href="https://wa.me/919602542617" class="cta-button secondary">
+        💬 WhatsApp Us
+      </a>
+    </div>
+  </div>
+</div>
