--- a/src/work/2022-08-01-plutomen.md
+++ b/src/work/2022-08-01-plutomen.md
@@ -1,129 +1,612 @@
 ---
-title: Plutomen Technologies – Establishing Demand Generation & Product Positioning for XR SaaS
+title: Establishing Demand Generation & Product Positioning for XR SaaS
 meta_title: Plutomen
 body_class: work
-excerpt: Before I joined, Plutomen had launched a MVP with a bit of product-market fit. However, the main business was more focused on XR services instead of product. 
+excerpt: My first step into B2B SaaS marketing started at Plutomen Technologies in September 2022. As their first marketing hire, I helped transform a service-focused XR company into a product-led SaaS business.
 highlightjs: true
 year: Sept 2022 - Sept 2024
+client: "Plutomen Technologies"
+industry: "DeepTech (XR/AR/VR) SaaS"
+location: "Remote, India"
+since: "Sept 2022 - Sept 2024"
+tags: ["case-study", "demand-generation", "b2b-saas", "product-positioning"]
+
+story: |
+  <p>Plutomen Technologies, an innovative XR-powered platform provider, was at a critical inflection point. They had built exceptional technology—an AR/VR Connected Worker Platform that was already transforming operations for a handful of large manufacturing clients. But there was a fundamental problem: they were positioned as a service company, not a SaaS product company.</p>
+  
+  <p>Founded with deep technical expertise in extended reality, Plutomen had spent years delivering custom XR solutions across India and the Middle East. While this services business was profitable, it wasn't scalable. They had recently raised $600k with a clear mandate: transition to a product-led growth model and build repeatable revenue streams.</p>
+  
+  <p>When I joined as their first marketing hire in September 2022, there was no demand generation function, no clear positioning, and no structured go-to-market strategy. The website messaging was diluted across multiple service offerings, making it difficult for potential buyers to understand the core product value. We had a powerful platform that could reduce industrial downtime and boost frontline worker productivity—but the market didn't know it yet.</p>
+  
+  <p>Over two transformative years, I built the marketing function from scratch, grew a team of 4, and established a repeatable demand generation engine that generated over $250K in qualified pipeline and positioned Plutomen as a serious player in the connected worker space.</p>
+
+challenge: "Plutomen was stuck between two identities: a service company with project-based revenue and a SaaS platform with unrealized potential. Their website positioning was unclear, there was no structured demand generation, no marketing automation, and the sales team had no marketing support for pipeline generation. They needed to establish product-market fit messaging, build awareness in a niche market, and create a scalable GTM motion—all while transitioning from services to product revenue."
+
+objective: "Transform Plutomen from a service-led XR company to a product-led SaaS business by establishing clear positioning, building a structured demand generation engine, generating 200+ marketing qualified leads, creating $250K+ in marketing pipeline, and supporting the sales team with outbound prospecting and content resources—all within 24 months as the first marketing hire."
+
+solutions:
+  - icon: "🎯"
+    title: "ICP & Positioning"
+    description: "Defined ideal customer profiles for manufacturing and industrial segments, mapped buyer journeys, and repositioned entire website from services to product-focused messaging."
+  
+  - icon: "📝"
+    title: "Content & SEO Strategy"
+    description: "Developed high-quality case studies, whitepapers, and AR/VR-focused content targeting connected worker keywords with comprehensive technical SEO optimization."
+  
+  - icon: "💰"
+    title: "Paid & ABM Campaigns"
+    description: "Launched targeted LinkedIn and Google Ads campaigns focused on AR/VR and connected worker use cases for enterprise manufacturing decision-makers."
+  
+  - icon: "⚙️"
+    title: "Marketing Automation"
+    description: "Implemented Freshsales CRM with lead scoring, nurturing workflows, and sales enablement tools. Supported 3,000+ monthly outbound emails with Apollo.io integration."
+
+swot:
+  strengths: "Strong product with proven ROI for large clients, innovative XR technology in growing market, recent funding for growth, and experienced technical team."
+  weaknesses: "No existing marketing function, unclear market positioning, limited brand awareness, small customer base, and service-company perception in the market."
+  opportunities: "Growing demand for connected worker solutions, digital transformation budgets in manufacturing, weak competitor content strategies, and emerging AR/VR adoption in industrial sectors."
+  threats: "Well-funded competitors with established market presence, long enterprise sales cycles, market education required for XR adoption, and economic uncertainty affecting manufacturing budgets."
+
+strategies:
+  - title: "Foundation & Research (Months 1-4)"
+    description: "Deep-dive into customer interviews, ICP development, competitor analysis, and buyer journey mapping. Collaborated with CEO and Head of Sales to define positioning strategy and messaging framework for product transition."
+  
+  - title: "Positioning & Website Overhaul (Months 3-6)"
+    description: "Complete website repositioning from service company to SaaS platform. Rewrote all key pages, implemented conversion-focused CTAs, optimized for search, and created clear product differentiation for manufacturing audience."
+  
+  - title: "Demand Generation Engine (Months 6-18)"
+    description: "Built comprehensive demand gen motion with content strategy, SEO implementation, paid advertising on LinkedIn and Google, marketing automation workflows, and lead nurturing sequences for SMB and enterprise opportunities."
+  
+  - title: "Scale & Optimization (Months 12-24)"
+    description: "Grew marketing team to 4 members, implemented advanced analytics with GA4, scaled outbound email campaigns to 3,000+ monthly sends, developed sales enablement content, and optimized campaigns for positive ROI and pipeline contribution."
+
+results:
+  - icon: "⭐"
+    value: "200+"
+    label: "Marketing Qualified Leads"
+  
+  - icon: "💰"
+    value: "$250K"
+    label: "Marketing Pipeline"
+  
+  - icon: "📊"
+    value: "+30%"
+    label: "Branded Search Visibility"
+  
+  - icon: "👥"
+    value: "1→4"
+    label: "Team Growth"
+  
+  - icon: "📧"
+    value: "3K+"
+    label: "Monthly Outbound Emails"
+  
+  - icon: "🎯"
+    value: "100%"
+    label: "Website Repositioning"
 ---
 
-<!-- Custom / Tailwind CSS Imports -->
-<link href="path/to/tailwind.css" rel="stylesheet">
-<link href="custom/typography.css" rel="stylesheet">
-<link href="custom/header-footer.css" rel="stylesheet">
-<link href="custom/home.css" rel="stylesheet">
-<link href="custom/bio.css" rel="stylesheet">
-<link href="custom/misc.css" rel="stylesheet">
-<link href="custom/highlightjs.css" rel="stylesheet">
-
 <style>
-/* Share button CSS you provided */
-.resp-sharing-button__link,
-.resp-sharing-button__icon { display: inline-block; }
-.resp-sharing-button__link { text-decoration: none; color: #fff; margin: 0.5em; }
-.resp-sharing-button { border-radius: 5px; transition: 25ms ease-out; padding: 0.5em 0.75em; font-family: Helvetica Neue,Helvetica,Arial,sans-serif; }
-#share-buttons img { width: 35px; padding: 5px; border: 0; box-shadow: 0; display: inline; }
-.resp-sharing-button__icon svg { width: 1em; height: 1em; margin-right: 0.4em; vertical-align: top; }
-.resp-sharing-button--small svg { margin: 0; vertical-align: middle; }
-.resp-sharing-button__icon { stroke: #fff; fill: none; }
-.resp-sharing-button__icon--solid, .resp-sharing-button__icon--solidcircle { fill: #fff; stroke: none; }
-.resp-sharing-button--twitter { background-color: #55acee; border-color: #55acee; }
-.resp-sharing-button--twitter:hover, .resp-sharing-button--twitter:active { background-color: #2795e9; border-color: #2795e9; }
-/* ...other platforms as in your original CSS... */
+/* Case Study Styles */
+.case-study {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 40px 20px;
+  background: #0E091D;
+  min-height: 100vh;
+}
+
+/* Hero Section */
+.case-study-hero {
+  text-align: center;
+  padding: 60px 20px;
+  background: linear-gradient(135deg, #EC4899 0%, #B91C1C 100%);
+  color: white;
+  border-radius: 20px;
+  margin-bottom: 60px;
+  box-shadow: 0 10px 40px rgba(236, 72, 153, 0.3);
+}
+
+.case-study-hero h1 {
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+  line-height: 1.2;
+}
+
+.case-study-hero p {
+  font-size: 1.25rem;
+  opacity: 0.9;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+/* Client Info Grid */
+.client-info {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 30px;
+  margin: 60px 0;
+  padding: 40px;
+  background: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 15px;
+  backdrop-filter: blur(10px);
+}
+
+.client-info-item {
+  text-align: center;
+}
+
+.client-info-label {
+  font-size: 0.875rem;
+  color: rgba(255, 255, 255, 0.6);
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 8px;
+  font-weight: 600;
+}
+
+.client-info-value {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #BF870B;
+}
+
+/* Content Sections */
+.case-study-section {
+  margin: 60px 0;
+}
+
+.case-study-section h2 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: white;
+  position: relative;
+  padding-bottom: 15px;
+}
+
+.case-study-section h2::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 80px;
+  height: 4px;
+  background: linear-gradient(90deg, #EC4899 0%, #B91C1C 100%);
+  border-radius: 2px;
+}
+
+.case-study-section h3 {
+  font-size: 1.75rem;
+  font-weight: 600;
+  margin: 30px 0 15px;
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.case-study-section p {
+  font-size: 1.125rem;
+  line-height: 1.8;
+  color: rgba(255, 255, 255, 0.7);
+  margin-bottom: 20px;
+}
+
+/* Story Section */
+.story-section {
+  background: rgba(255, 255, 255, 0.05);
+  padding: 50px;
+  border-radius: 15px;
+  border-left: 5px solid #EC4899;
+  backdrop-filter: blur(10px);
+}
+
+/* Challenge/Objective Cards */
+.challenge-objective-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 30px;
+  margin: 40px 0;
+}
+
+.challenge-card, .objective-card {
+  padding: 40px;
+  border-radius: 15px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+}
+
+.challenge-card {
+  background: linear-gradient(135deg, #BF870B 0%, #D4A017 100%);
+  color: white;
+}
+
+.objective-card {
+  background: linear-gradient(135deg, #28A745 0%, #16A34A 100%);
+  color: white;
+}
+
+.challenge-card h3, .objective-card h3 {
+  margin-top: 0;
+  font-size: 1.5rem;
+  color: white;
+}
+
+/* Solutions Grid */
+.solutions-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 30px;
+  margin: 40px 0;
+}
+
+.solution-item {
+  background: rgba(255, 255, 255, 0.05);
+  padding: 40px;
+  border-radius: 15px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  text-align: center;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
+  backdrop-filter: blur(10px);
+}
+
+.solution-item:hover {
+  transform: translateY(-10px);
+  border-color: #EC4899;
+  box-shadow: 0 8px 30px rgba(236, 72, 153, 0.4);
+}
+
+.solution-icon {
+  font-size: 4rem;
+  margin-bottom: 20px;
+}
+
+.solution-item h4 {
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-bottom: 15px;
+  color: white;
+}
+
+.solution-item p {
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.7);
+  line-height: 1.6;
+}
+
+/* SWOT Analysis */
+.swot-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  margin: 40px 0;
+}
+
+.swot-item {
+  padding: 30px;
+  border-radius: 15px;
+  color: white;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+}
+
+.swot-item.strengths {
+  background: linear-gradient(135deg, #28A745 0%, #16A34A 100%);
+}
+
+.swot-item.weaknesses {
+  background: linear-gradient(135deg, #B91C1C 0%, #DC2626 100%);
+}
+
+.swot-item.opportunities {
+  background: linear-gradient(135deg, #BF870B 0%, #D4A017 100%);
+}
+
+.swot-item.threats {
+  background: linear-gradient(135deg, #EC4899 0%, #F472B6 100%);
+}
+
+.swot-item h4 {
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-bottom: 15px;
+  color: white;
+}
+
+.swot-item p {
+  font-size: 1rem;
+  line-height: 1.6;
+  color: rgba(255, 255, 255, 0.95);
+}
+
+/* Strategy & Execution */
+.strategy-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 30px;
+  margin: 40px 0;
+}
+
+.strategy-item {
+  background: rgba(255, 255, 255, 0.05);
+  padding: 30px;
+  border-radius: 15px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-top: 4px solid #EC4899;
+  backdrop-filter: blur(10px);
+  transition: all 0.3s ease;
+}
+
+.strategy-item:hover {
+  border-color: #EC4899;
+  box-shadow: 0 4px 20px rgba(236, 72, 153, 0.3);
+}
+
+.strategy-item h4 {
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-bottom: 15px;
+  color: white;
+}
+
+.strategy-item p {
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.7);
+  line-height: 1.7;
+}
+
+/* Results Section */
+.results-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 30px;
+  margin: 40px 0;
+}
+
+.result-item {
+  background: rgba(255, 255, 255, 0.05);
+  padding: 40px 30px;
+  border-radius: 15px;
+  text-align: center;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  transition: all 0.3s ease;
+}
+
+.result-item:hover {
+  transform: translateY(-8px);
+  border-color: #BF870B;
+  box-shadow: 0 8px 30px rgba(191, 135, 11, 0.4);
+}
+
+.result-icon {
+  font-size: 3rem;
+  margin-bottom: 15px;
+}
+
+.result-value {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #BF870B;
+  margin-bottom: 10px;
+}
+
+.result-label {
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.8);
+  font-weight: 600;
+}
+
+/* CTA Section */
+.case-study-cta {
+  background: linear-gradient(135deg, #EC4899 0%, #B91C1C 100%);
+  color: white;
+  padding: 60px 40px;
+  border-radius: 20px;
+  text-align: center;
+  margin: 80px 0 40px;
+  box-shadow: 0 10px 40px rgba(236, 72, 153, 0.4);
+}
+
+.case-study-cta h2 {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  color: white;
+}
+
+.case-study-cta h2::after {
+  display: none;
+}
+
+.case-study-cta p {
+  font-size: 1.25rem;
+  margin-bottom: 30px;
+  opacity: 0.95;
+  color: white;
+}
+
+.cta-buttons {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.cta-button {
+  display: inline-block;
+  padding: 15px 40px;
+  border-radius: 50px;
+  font-weight: bold;
+  font-size: 1.125rem;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+.cta-button.primary {
+  background: #BF870B;
+  color: white;
+}
+
+.cta-button.primary:hover {
+  background: #D4A017;
+  transform: translateY(-3px);
+  box-shadow: 0 10px 25px rgba(191, 135, 11, 0.4);
+}
+
+.cta-button.secondary {
+  background: transparent;
+  color: white;
+  border: 2px solid white;
+}
+
+.cta-button.secondary:hover {
+  background: white;
+  color: #EC4899;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .case-study-hero h1 {
+    font-size: 2rem;
+  }
+  
+  .case-study-section h2 {
+    font-size: 2rem;
+  }
+  
+  .solutions-grid,
+  .strategy-grid,
+  .results-grid {
+    grid-template-columns: 1fr;
+  }
+}
 </style>
 
-<body class="bg-white text-gray-900">
-  <section class="intro mb-12">
-    <div class="dream-job aligned flex items-center p-6 bg-gray-900 rounded-lg border-dashed border-gray-600 border sm:block">
-      <div class="flex-1 flex items-center justify-center sm:mb-6">
-        <img src="/assets/img/Plutomen Logo New.png" alt="Plutomen logo" class="h-16">
-      </div>
-      <div class="flex-1 flex items-center justify-center sm:mb-4">
-        <p class="uppercase text-sm text-blue-600">
-          DeepTech (XR/AR/VR) Company, SaaS
-        </p>
-      </div>
-      <div class="flex-1 flex items-center justify-center">
-        <p class="uppercase text-sm text-gray-400">
-          Remote, India
-        </p>
-      </div>
+  <!-- Client Information -->
+  <div class="client-info">
+    <div class="client-info-item">
+      <div class="client-info-label">Client</div>
+      <div class="client-info-value">{{ client }}</div>
     </div>
-  </section>
-
-  <!-- Description Section -->
- 
-  <p class="text-white">Plutomen Technologies offers an XR-powered Connected Worker Platform, enabling frontline workers in manufacturing and industrial sectors to access AR-based remote assistance, guided workflows, and digital work instructions to reduce downtime and improve productivity. Before I joined, Plutomen had launched a MVP with a bit of product-market fit (a few users). However, the main business was more focused on XR services instead of product. This was spread thin across their website positioning too. My main responsibility was to reposition the website from a service company to product company along with setting up the demand gen motion.</p>
-
-
-  <!-- Results -->
-  <h2 class="text-3xl font-semibold mb-4">The Results</h2>
-  <div class="bg-[#0F172A] p-12 mb-12 flex justify-center items-center">
-    <div class="flex flex-wrap justify-center gap-8 w-full max-w-6xl">
-      <div class="w-56 p-6 bg-white rounded-lg text-center shadow-xl">
-        <div class="text-3xl mb-3 text-indigo-600">&#x2B50;</div>
-        <h4 class="text-xl font-semibold text-gray-800">Marketing Qualified Leads</h4>
-        <h3 class="text-3xl mb-3 text-green-600">Over 200+</h3>
-      </div>
-
-  <div class="w-56 p-6 bg-white rounded-lg text-center shadow-xl">
-        <div class="text-3xl mb-3 text-green-600">&#x1F4CA;</div>
-        <h4 class="text-xl font-semibold text-gray-800">Branded Search Visibility</h4>
-        <h3 class="text-3xl font-extrabold text-green-700 mt-2">+30%</h3>
-      </div>
-
-  <div class="w-56 p-6 bg-white rounded-lg text-center shadow-xl">
-        <div class="text-3xl mb-3 text-red-600">&#x1F680;</div>
-        <h4 class="text-xl font-semibold text-gray-800">Marketing Pipeline</h4>
-        <h3 class="text-3xl font-extrabold text-green-700 mt-2">$250k</h3>
-      </div>
+    <div class="client-info-item">
+      <div class="client-info-label">Industry</div>
+      <div class="client-info-value">{{ industry }}</div>
+    </div>
+    <div class="client-info-item">
+      <div class="client-info-label">Location</div>
+      <div class="client-info-value">{{ location }}</div>
+    </div>
+    <div class="client-info-item">
+      <div class="client-info-label">Duration</div>
+      <div class="client-info-value">{{ since }}</div>
     </div>
   </div>
 
-  <!-- Challenge -->
-  <section class="challenge space-y-4">
-    <h3 class="text-2xl font-semibold">The Challenge</h3>
-    <p>Before I joined, Plutomen was primarily focused on selling XR services to a PAN India and Middle East audience. The company had built a robust XR platform already used by a few large clients but lacked a structured product-focused GTM strategy.</p>
-    <p>After raising $600k to build marketing and sales functions, Plutomen needed to transition from a service-led model to a scalable product-led SaaS business. They had no structured demand generation, positioning, or repeatable pipeline engine to support enterprise sales.</p>
-    <p>I joined as Plutomen's first marketing hire, starting as an individual contributor, and over time, built and led a team of 4 to execute a scalable GTM and demand generation strategy.</p>
+  <!-- About/Story Section -->
+  <section class="case-study-section">
+    <h2>About {{ client }}</h2>
+    <div class="story-section">
+      {{ story | safe }}
+    </div>
   </section>
 
-  <!-- Goals -->
-  <section class="goals space-y-4">
-    <h3 class="text-2xl font-semibold">The Objectives</h3>
-    <p>Collaborating with the CEO and Head of Sales, I aimed to:</p>
-    <ol>
-      <li>Define clear ICPs and positioning for manufacturing and industrial segments.</li>
-      <li>Establish paid & ABM campaigns to capture high-intent demand.</li>
-      <li>Build marketing automation workflows to nurture SMB's and Enterprise opportunities.</li>
-      <li>Support sales team with oubound cold email function with Apollo.io and events prospecting.</li>
-      <li>Build a repeatable, data-driven demand generation engine with positive ROI.</li>
-    </ol>
+  <!-- Challenge & Objective -->
+  <section class="case-study-section">
+    <h2>Challenge & Objective</h2>
+    <div class="challenge-objective-grid">
+      <div class="challenge-card">
+        <h3>The Challenge</h3>
+        <p>{{ challenge }}</p>
+      </div>
+      <div class="objective-card">
+        <h3>Objective</h3>
+        <p>{{ objective }}</p>
+      </div>
+    </div>
   </section>
 
-  <!-- Solution -->
-  <section class="solution space-y-4">
-    <h3 class="text-2xl font-semibold">Key Actions Performed</h3>
-    <ul class="round">
-      <li>ICP & Buyer Journey Mapping: Identified ideal industrial sectors, refining messaging for plant heads, VP of Digital Transformation, maintenance managers, and COOs.</li>
-      <li>Content Strategy: Developed high-quality case studies, whitepapers, and AR/VR-focused blog content targeting connected worker and frontline productivity keywords.</li>
-      <li>Website Optimization: Refreshed website positioning, optimized key pages for search, and implemented conversion-focused CTAs.</li>
-      <li>SEO Strategy: Conducted keyword research, optimized technical SEO, and implemented a content calendar.</li>
-      <li>Paid Ads: Ran LinkedIn and Google Ads targeting AR/VR and connected worker use cases for enterprises.</li>
-      <li>Marketing Automation: Implemented Freshsales for markting and sales lead tracking, nurturing workflows, and lead scoring.</li>
-      <li>Performance Analytics: Set up GA4, dashboards, and monthly reporting to track MQLs and pipeline impact.</li>
-      <li>Outbound Email Campaigns: Assisted sales with iterative cold outbound sequences with personalization. (Atleast 3000 Emails Per Month)</li>
-    </ul>
+  <!-- Proposed Solutions -->
+  <section class="case-study-section">
+    <h2>Proposed Solutions</h2>
+    <p>As the first marketing hire, I designed and implemented a comprehensive demand generation strategy tailored to the unique challenges of positioning XR technology in manufacturing markets.</p>
+    <div class="solutions-grid">
+{%- for solution in solutions %}
+      <div class="solution-item">
+        <div class="solution-icon">{{ solution.icon }}</div>
+        <h4>{{ solution.title }}</h4>
+        <p>{{ solution.description }}</p>
+      </div>
+{%- endfor %}
+    </div>
   </section>
 
-  <!-- About -->
-  <section class="about space-y-4">
-    <h3 class="text-2xl font-semibold">About Plutomen</h3>
-    <p>Plutomen Technologies offers an XR-powered Connected Worker Platform, enabling frontline workers in manufacturing and industrial sectors to access AR-based remote assistance, guided workflows, and digital work instructions to reduce assets/machine downtime and improve productivity.</p>
+  <!-- SWOT Analysis -->
+  <section class="case-study-section">
+    <h2>SWOT Analysis</h2>
+    <p>Understanding the internal capabilities and external market dynamics was critical to developing an effective go-to-market strategy for a company in transition.</p>
+    <div class="swot-grid">
+      <div class="swot-item strengths">
+        <h4>Strengths</h4>
+        <p>{{ swot.strengths }}</p>
+      </div>
+      <div class="swot-item weaknesses">
+        <h4>Weaknesses</h4>
+        <p>{{ swot.weaknesses }}</p>
+      </div>
+      <div class="swot-item opportunities">
+        <h4>Opportunities</h4>
+        <p>{{ swot.opportunities }}</p>
+      </div>
+      <div class="swot-item threats">
+        <h4>Threats</h4>
+        <p>{{ swot.threats }}</p>
+      </div>
+    </div>
   </section>
+
+  <!-- Strategy & Execution -->
+  <section class="case-study-section">
+    <h2>Strategy & Execution</h2>
+    <p>Building a marketing function from scratch required a phased approach—starting with foundations and scaling systematically over 24 months.</p>
+    <div class="strategy-grid">
+{%- for strategy in strategies %}
+      <div class="strategy-item">
+        <h4>{{ strategy.title }}</h4>
+        <p>{{ strategy.description }}</p>
+      </div>
+{%- endfor %}
+    </div>
+  </section>
+
+  <!-- Performance Results -->
+  <section class="case-study-section">
+    <h2>Performance Results</h2>
+    <div class="results-grid">
+{%- for result in results %}
+      <div class="result-item">
+        <div class="result-icon">{{ result.icon }}</div>
+        <div class="result-value">{{ result.value }}</div>
+        <div class="result-label">{{ result.label }}</div>
+      </div>
+{%- endfor %}
+    </div>
+  </section>
+
+  <!-- CTA Section -->
+  <div class="case-study-cta">
+    <h2>Need a Marketing Leader Who Can Build from Zero?</h2>
+    <p>Let's discuss how I can help establish your demand generation engine and scale your B2B SaaS growth.</p>
+    <div class="cta-buttons">
+      <a href="mailto:rakshitsoral@gmail.com" class="cta-button primary">
+        📧 Get in Touch
+      </a>
+      <a href="https://wa.me/919602542617" class="cta-button secondary">
+        💬 WhatsApp Us
+      </a>
+    </div>
+  </div>
+</div>
 
   <!-- Other Case Studies -->
-  <h3 class="text-2xl font-semibold">More Work Experiences</h3>
+  <h3 class="text-2xl font-semibold">More Work Experiences</h3><br>
   <section class="other-case-studies flex flex-wrap gap-6">
     <div class="dream-job aligned flex items-start p-6 bg-gray-900 rounded-lg border-dashed border-gray-600 border sm:block flex-1 min-w-[45%]">
       <img src="/assets/img/Kitecyber-logo-new.png" alt="KiteCyber logo" width="125" class="sm:mb-6 mr-8 sm:mr-0">
